# YAP-XFISH

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_release_zip.py
.cargo/: config.toml
assets/: app.manifest  tray_32.rgba
release/: README.txt
smoketest/: migration_test.py  smoke.py  smoke2.py  smoke3.py
src/: app.rs  error.rs  main.rs
src/config/: manager.rs  mod.rs  model.rs  render.rs
src/core/: manager.rs  mod.rs  process.rs
src/latency/: mod.rs
src/profile/: mod.rs
src/rules/: mod.rs
src/server/: handlers.rs  mod.rs  static_files.rs  ws.rs
src/subscription/: fetcher.rs  manager.rs  mod.rs  model.rs  parser.rs  scheduler.rs
src/system/: admin.rs  autostart.rs  dpi.rs  mem.rs  mod.rs  single_instance.rs  sysproxy.rs  tray.rs
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  api.ts  store.ts  style.css  ws.ts
webui/src/views/: Dashboard.vue  Profiles.vue  Rules.vue  Settings.vue  Subscriptions.vue
