[package]
name = "yap-xfish"
version = "0.1.1"
edition = "2021"
default-run = "yap-xfish"
description = "YAP-XFISH — Windows Sing-box 代理客户端（WebUI + 托盘）"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "sync", "time", "fs", "io-util", "signal"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rust-embed = { version = "8", features = ["debug-embed"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "socks"] }
base64 = "0.22"
cron = "0.12"
tray-icon = { version = "0.24.1", default-features = false }
winreg = "0.56.0"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_UI_Shell", "Win32_System_Registry", "Win32_System_ProcessStatus", "Win32_System_LibraryLoader"] }

[build-dependencies]
rust-embed = { version = "8", features = ["debug-embed"] }
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
